--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <a href="#" class="w3-left w3-button w3-white">MY ART</a>
-    <a href="#about" class="w3-right w3-button w3-white">About me</a>
+    <a href="#about" class="w3-right w3-button w3-white">ABOUT</a>
   </header>
 
   <!-- Photo Grid Collages -->
   <div class="w3-row">
     <div class="w3-half">
-      <h2>Collages</h2>
+      <h3>Collages</h3>
       <img src="/w3images/streetart.jpg" style="width:100%">
       <img src="/w3images/streetart2.jpg" style="width:100%">
       <img src="/w3images/streetart5.jpg" style="width:100%">
@@ -38,7 +38,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Graffiti -->
   <div class="w3-row">
     <div class="w3-half">
-      <h2>Graffiti</h2>
+      <h3>Graffiti</h3>
       <img src="/w3images/streetart.jpg" style="width:100%">
       <img src="/w3images/streetart2.jpg" style="width:100%">
       <img src="/w3images/streetart5.jpg" style="width:100%">
@@ -53,7 +53,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Paintings and portraits -->
   <div class="w3-row">
     <div class="w3-half">
-      <h2>Paintings & portraits</h2>
+      <h3>Paintings & portraits</h3>
       <img src="/w3images/streetart.jpg" style="width:100%">
       <img src="/w3images/streetart2.jpg" style="width:100%">
       <img src="/w3images/streetart5.jpg" style="width:100%">
@@ -68,7 +68,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Illustrations -->
   <div class="w3-row">
     <div class="w3-half">
-      <h2>Illustrations</h2>
+      <h3>Illustrations</h3>
       <img src="/w3images/streetart.jpg" style="width:100%">
       <img src="/w3images/streetart2.jpg" style="width:100%">
       <img src="/w3images/streetart5.jpg" style="width:100%">
