--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@ body {font-family: "Raleway", Arial, sans-serif}
   <div class="w3-row">
     <div class="w3-half">
       <h3>Collages</h3>
-      <img src="/w3images/streetart.jpg" style="width:100%">
-      <img src="/w3images/streetart2.jpg" style="width:100%">
-      <img src="/w3images/streetart5.jpg" style="width:100%">
+      <img src="/ACS_0180.JPG" style="width:100%">
+      <img src="/ACS_0193.JPG" style="width:100%">
+      <img src="/ACS_0194.JPG" style="width:100%">
+      <img src="/ACS_0195.jpg" style="width:100%">
+      <img src="/IMG_5291.jpg" style="width:100%">
+      <img src="/IMG_5729.PNG" style="width:100%">
     </div>
 
     <div class="w3-half">
