--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
   <h2>About me</h2>
-  <img src="/w3images/boy.jpg" class="w3-image w3-padding-32" width="300" height="300">
+  <img src="/IMG_4951.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
     <p>As a Seattle artist, having grown up in Tacoma and Spokane, I feel a strong conneections to the lifestyles of the Pacific Northwest. My collages reflect the diversity of styles that I find. My graffiti projects are concerned with reclaiming the cultural space via art, re-tagging random public graffiti with the meaningful Native American elements of my ancestors and the Salish traditions of the Puget Sound area.</p>
 
