--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Collages -->
   <div class="w3-row">
     <h5>Collages</h5>
+     
+    <p>My collages reflect on the diversity of lifestyles in the Pacific Northwest, the contact and fusion of Native American and European cultures, and the influence of immigrants from all over the world.</p>
+
     <div class="w3-half">
       <img src="/IMG_0237.jpg" style="width:100%">
       <img src="/IMG_0214.jpg" style="width:100%">
@@ -41,6 +44,9 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Graffiti -->
   <div class="w3-row">
     <h5>Graffiti</h5>
+    
+    <p> My graffiti projects are concerned with reclaiming the cultural space via art, re-tagging random public graffiti with the meaningful Native American elements of my Spokane ancestors and the Salish traditions of the Puget Sound area.</p>
+
     <div class="w3-half">
       <img src="/ACS_0180.JPG" style="width:100%">
       <img src="/ACS_0195.jpg" style="width:100%">
@@ -90,7 +96,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <h2>About me</h2>
   <img src="/IMG_4951.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
-    <p>As a Seattle artist, having grown up in Tacoma and Spokane, I feel a strong conneections to the lifestyles of the Pacific Northwest. My collages reflect the diversity of styles that I find. My graffiti projects are concerned with reclaiming the cultural space via art, re-tagging random public graffiti with the meaningful Native American elements of my ancestors and the Salish traditions of the Puget Sound area.</p>
+    <p>I'm a Seattle artist with strong roots in the Pacific Northwest.</p>
 
     <p>Please contact me for the pricelist, commissions, or to say hi.</p>
 
