--- a/index.html
+++ b/index.html
@@ -129,19 +129,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p>Please contact me for the pricelist, commissions, or to say hi.</p>
 
     <p class="w3-large w3-text-pink">Get in touch!</p>
-    <div class="w3-section">
-      <label><b>Name</b></label>
-      <input class="w3-input w3-border" type="text" required name="Name">
-    </div>
-    <div class="w3-section">
-      <label><b>Email</b></label>
-      <input class="w3-input w3-border" type="text" required name="Email">
-    </div>
-    <div class="w3-section">
-      <label><b>Message</b></label>
-      <input class="w3-input w3-border" required name="Message">
-    </div>
-    <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
+    <a href="https://www.facebook.com/rich.brisbois.9">link text</a>
   </form>
   <br>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
