--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
     <p>Please contact me for the pricelist, commissions, or to say hi.</p>
 
-    <p class="w3-large w3-text-pink">Get in touch!</p>
-    <a href="https://www.facebook.com/rich.brisbois.9">link text</a>
+    <a href="https://www.facebook.com/rich.brisbois.9">Get in touch!</a>
   </form>
   <br>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
