--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Collages -->
   <div class="w3-row">
     <br>
-    <h5>Collages</h5>
-     
-    <p>My collages reflect on the diversity of lifestyles in the Pacific Northwest, the contact and fusion of Native American and European cultures, and the influence of immigrants from all over the world.</p>
+    <h1>COLLAGES</h1>
     <br>
     <div class="w3-half">
       <img src="/IMG_1701.jpg" style="width:100%">
@@ -47,9 +45,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Graffiti -->
   <div class="w3-row">
     <br>
-    <h5>Graffiti</h5>
-    
-    <p> My graffiti projects are concerned with reclaiming the cultural space via art, re-tagging random public graffiti with the meaningful Native American elements of my Spokane ancestors and the Salish traditions of the Puget Sound area.</p>
+    <h1>GRAFFITI</h1>
     <br>
     <div class="w3-half">
       <img src="/ACS_0180.JPG" style="width:100%">
@@ -65,7 +61,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Paintings -->
   <div class="w3-row">
     <br>
-    <h5>Paintings</h5>
+    <h1>PAINTINGS</h1>
     <br>
     <div class="w3-half">
       <img src="/IMG_0230.jpg" style="width:100%">
@@ -85,7 +81,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid Portraits -->
   <div class="w3-row">
     <br>
-    <h5>Portraits</h5>
+    <h1>Portraits</h1>
     <br>
     <div class="w3-half">
       <img src="/IMG_5995.jpg" style="width:100%">
