--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ body {font-family: "Raleway", Arial, sans-serif}
   <h2>About me</h2>
   <img src="/IMG_4951.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
+    <p>Richard Brisbois</p>
+    
     <p>I'm a Seattle artist with strong roots in the Pacific Northwest.</p>
 
     <p>Please contact me for the pricelist, commissions, or to say hi.</p>
